--- a/Shelter/appsettings.json
+++ b/Shelter/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN IN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
