--- a/Shelter/appsettings.json
+++ b/Shelter/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN IN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "This is soooooooo secret!  Like, the most top secret string ever in the history of secrecy"
   },
   "Logging": {
     "LogLevel": {
